feat(service): ✨ 重构集群服务命令功能并增加DTO/VO支持
重构了集群服务命令相关的服务层和控制器，引入DTO和VO对象实现业务逻辑与展示层的分离。
主要变更包括：
1. 新增ClusterServiceCommandDTO数据传输对象
2. 新增ClusterServiceCommandVO视图对象
3. 实现ClusterServiceCommandConverter转换器
4. 修改Service层接口返回DTO类型
5. 完善Controller层API的DTO/VO转换

这些变更使得代码结构更清晰，职责更明确，同时为前后端分离提供了更好的支持。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>